force-app/main/default/objects/SPEN_Generator__c/SPEN_Generator__c.object-meta.xml
<CustomObject>
    <description>This custom object is for Connections process</description>
    <label>Generator</label>
    <nameField>
        <label>Generator Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Generator</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>