force-app/main/default/objects/SPEN_Generator__c/fields/SPEN_CombinedHeatPower__c.field-meta.xml
<CustomField>
    <fullName>SPEN_CombinedHeatPower__c</fullName>
    <description>This field is for Connections process.</description>
    <label>Combined Heat Power</label>
    <length>255</length>
    <type>Text</type>
</CustomField>