force-app/main/default/objects/SPEN_Generator__c/fields/SPEN_Rating__c.field-meta.xml
<CustomField>
    <fullName>SPEN_Rating__c</fullName>
    <description>This field is for Connections process</description>
    <label>Rating</label>
    <precision>17</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>