force-app/main/default/objects/SPEN_Generator__c/fields/SPEN_RelatedCase__c.field-meta.xml
<CustomField>
    <fullName>SPEN_RelatedCase__c</fullName>
    <complianceGroup>GDPR</complianceGroup>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Related Case</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>Generator</relationshipLabel>
    <relationshipName>Generator</relationshipName>
    <type>Lookup</type>
</CustomField>