force-app/main/default/objects/SPEN_Generator__c/fields/SPEN_RelatedPlot__c.field-meta.xml
<CustomField>
    <fullName>SPEN_RelatedPlot__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This field is for Connections process</description>
    <label>Related Plot</label>
    <referenceTo>SPEN_Plot__c</referenceTo>
    <relationshipLabel>Generator</relationshipLabel>
    <relationshipName>Generator</relationshipName>
    <type>Lookup</type>
</CustomField>