force-app/main/default/objects/SPEN_Generator__c/fields/SPEN_TechnologyType__c.field-meta.xml
<CustomField>
    <fullName>SPEN_TechnologyType__c</fullName>
    <description>This field is for Connections process.</description>
    <label>Technology Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>