force-app/main/default/objects/SPEN_Generator__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>SPEN_RelatedPlot__c</columns>
    <columns>SPEN_Rating__c</columns>
    <columns>SPEN_TechnologyType__c</columns>
    <columns>SPEN_CombinedHeatPower__c</columns>
    <columns>SPEN_FuelType__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>